tests/fail/semantics/construct_property_type_mismatch/main.kira
// The value supplied for a property must match the property's declared type. `path` is a
// `String`, so assigning an integer is a type mismatch.

construct Route {
    properties {
        required path: String
    }
}

Route Home {
    properties {
        path: 42
    }
}

@Main
function main() {
    return
}
